SalesforceGarage/src/objects/QBO_Payment_Method__c.object
<CustomObject>
    <fields>
        <fullName>QBO_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBO_PaymentMethod_Ref_Id__c</fullName>
        <label>PaymentMethod Ref Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Method</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>